import java.util.ArrayList;

public class Main {
    public static void main(String[] args) {
        Chill chill = new Chill();
        chill.startSequence("Welcome!");

    }

}
       /* LoadDataFromFile myLoader = new LoadDataFromFile();

        //initier alle brugere
        ArrayList <User> users = new ArrayList<User>();

        users = myLoader.loadDataFromSource();

        //Initier alle film
        ArrayList <Movies> movies = new ArrayList<Movies>();

        LoadMovies myMovieLoader = new LoadMediaFromFIle();

        movies = myMovieLoader.loadMedia();
            }
        }
*/



