public class MainMenu {
    String username;

    public MainMenu(String username) {
        this.username = username;
    }

    public String getUsername() {
        return username;
    }

}
